LSTM update and input files

--- a/LSTM_GloVE.ipynb
+++ b/LSTM_GloVE.ipynb
@@ -172,6 +172,7 @@
     "    dataframe = dataframe.astype({\"comment_text\":'string',\n",
     "                                  \"toxic\":'int8',\n",
     "                                  \"severe_toxic\":'int8',\n",
+    "                                  \"obscene\":'int8',\n",
     "                                  \"threat\":'int8',\n",
     "                                  \"insult\":'int8',\n",
     "                                  \"identity_hate\":'int8',\n",
@@ -382,7 +383,7 @@
     "#                embedding_file: embedding file to use \n",
     "\n",
     "weight_matrix_config = {\n",
-    "    \"glove_file\": \"glove.6B.zip\",\n",
+    "    \"glove_file\": \"input/glove.6B.zip\",\n",
     "    \"target_dir\": \"input/glove.6B\",\n",
     "    \"embedding_file\": \"glove.6B.50d.txt\",\n",
     "}"
